--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
-<h3 style="text-align: center;">Press Button to display a list with product names.</h3>
-<button (click)="fetchProducts()" style="display: block; margin: 0 auto; font-size: 20px;">Press me</button>
+<h3>Press button to display a list with product names.</h3>
+<button class="button" (click)="fetchProducts()">Press me</button>
 
 <hr>
 
-<table class="table table-striped"  style="max-width: 700px; margin: 0 auto;">
+<table class="table table-striped">
             <thead>
                 <tr>
                     <th>Товар</th>
