--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,19 @@
 p {
   font-family: Lato;
 }
+
+h3 {
+  text-align: center;
+}
+
+.button {
+  display: block; 
+  margin: 0 auto; 
+  font-size: 20px;
+  border-radius: 10%;
+}
+
+.table {
+  max-width: 700px; 
+  margin: 0 auto;
+}
