2 files modified, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
                     <td>{{ item.brand }}</td>
                     <td>{{ item.price }}</td>
                     <td>{{ item.stars }}</td>
-                    <td><a href="{{ item.link }}" alt="product on amazon">on amazon.co.uk</a></td>
+                    <td><a href="{{ item.link }}" target="_blank" alt="product on amazon">on amazon.co.uk</a></td>
                 </tr>
             </tbody>
         </table>
