--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,22 @@ h3 {
 }
 
 .table {
-  max-width: 700px; 
+  max-width: 800px; 
   margin: 0 auto;
+  font-size: 18px;
+  text-align: left;
+  border-collapse: separate;
+  background: #1c943a38;
+  border: 13px solid #1c943a38;
+  border-radius: 20px;
+}
+
+
+th {
+  padding: 10px;
+}
+
+td {
+padding: 10px;
+border-top: 10px solid rgba(29, 180, 37, 0.432);
 }
